# web-compressor

./: .gitignore  Cargo.toml  README.md
src/: compress.rs  main.rs
